[package]
name = "p2p-chat"
version = "0.1.0"
authors = ["Ashay Shah <ashah252@uic.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name= "chat"
path= "./src/chat.rs"

[dependencies]
epoll="*"
regex="*"
rand="*"

[lib]
name="chat"
path="./src/chatnode.rs"